--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
-    "name": "Alone Pairing",
-    "description": "FLASH-MD WA bot, Created by France King",
-    "logo": "https://telegra.ph/file/8dace2d24b82568c29e19.jpg",
-    "repository": "https://github.com/toputech/Flash-Md-Session11/tree/main",
-    "keywords": ["FlashMd"],
+    "name": "T-R-O-U-B-L-E-XMD Pairing",
+    "description": "https://github.com/spartaspiceSMR/T-R-O-U-B-L-E-XMD/tree/main",
+    "logo": "https://files.catbox.moe/6fzejo.jpg",
+    "repository": "https://github.com/spartaspiceSMR/T-R-O-U-B-L-E-XMD/tree/main",
+    "keywords": ["T-R-O-U-B-L-E-XMD"],
     "success_url": "/", 
     "buildpacks": [{ "url": "https://github.com/heroku/heroku-buildpack-nodejs#latest" } ],
     "env": {      
